Implement the login functionality
* Create .env file for environment configuration.
* Implement apiConfig to define API endpoints and configuration.
* Define apiEndpoints with specific endpoints for authentication.
* Create useAppDispatch hook for accessing the Redux dispatch function.
* Implement Auth reducer, actions, and services for handling authentication-related functionality.
* Create encryptPassword utility function for encrypting user passwords securely.
* Implement makeRequest utility for making HTTP requests to the server.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,10 +19,12 @@
     "paths": {
       "components/*": ["components/*"],
       "screens/*": ["screens/*"],
-      "services/*": ["store/services/*"],
-      "actions/*": ["store/actions/*"],
-      "reducers/*": ["store/reducers/*"],
-      "hooks/*": ["hooks/*"]
+      "services/*": ["services/*"],
+      "actions/*": ["actions/*"],
+      "reducers/*": ["reducers/*"],
+      "hooks/*": ["hooks/*"],
+      "config/*": ["config/*"],
+      "utils/*": ["utils/*"]
     }
   },
   "include": ["src"]
